// Vitest Snapshot v1

exports[`Space > Space alignVue demo works fine 1`] = `
<t-space
  break-line=""
  data-v-2418d6a3=""
>
  <t-space
    align="start"
    class="space-border"
    data-v-2418d6a3=""
  >
    <div
      data-v-2418d6a3=""
    >
      start
    </div>
    <t-button
      data-v-2418d6a3=""
    >
      Button
    </t-button>
    <div
      class="space-block"
      data-v-2418d6a3=""
    />
  </t-space>
  <t-space
    align="center"
    class="space-border"
    data-v-2418d6a3=""
  >
    <div
      data-v-2418d6a3=""
    >
      center
    </div>
    <t-button
      data-v-2418d6a3=""
    >
      Button
    </t-button>
    <div
      class="space-block"
      data-v-2418d6a3=""
    />
  </t-space>
  <t-space
    align="end"
    class="space-border"
    data-v-2418d6a3=""
  >
    <div
      data-v-2418d6a3=""
    >
      end
    </div>
    <t-button
      data-v-2418d6a3=""
    >
      Button
    </t-button>
    <div
      class="space-block"
      data-v-2418d6a3=""
    />
  </t-space>
  <t-space
    align="baseline"
    class="space-border"
    data-v-2418d6a3=""
  >
    <div
      data-v-2418d6a3=""
    >
      baseline
    </div>
    <t-button
      data-v-2418d6a3=""
    >
      Button
    </t-button>
    <div
      class="space-block"
      data-v-2418d6a3=""
    />
  </t-space>
</t-space>
`;

exports[`Space > Space baseVue demo works fine 1`] = `
<t-space>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
</t-space>
`;

exports[`Space > Space breakLineVue demo works fine 1`] = `
<t-space
  break-line=""
>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
  <t-button>
    Button
  </t-button>
</t-space>
`;

exports[`Space > Space separatorVue demo works fine 1`] = `
<t-space
  align="center"
  separator="() => h(\\"t-divider\\", {
        \\"attrs\\": {
          \\"layout\\": \\"vertical\\"
        }
      })"
>
  <t-button
    variant="text"
  >
    Text
  </t-button>
  <t-button
    variant="text"
  >
    Text
  </t-button>
  <t-button
    variant="text"
  >
    Text
  </t-button>
</t-space>
`;

exports[`Space > Space sizeVue demo works fine 1`] = `
<div>
  <t-slider />
  <br />
  <t-space
    size="8"
  >
    <t-button>
      Button
    </t-button>
    <t-button>
      Button
    </t-button>
    <t-button>
      Button
    </t-button>
    <t-button>
      Button
    </t-button>
  </t-space>
</div>
`;

exports[`Space > Space verticalVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-card
    actions="操作"
    bordered=""
    header=""
    hover-shadow=""
    title="标题"
  >
     仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
  </t-card>
  <t-card
    actions="操作"
    bordered=""
    header=""
    hover-shadow=""
    title="标题"
  >
     仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
  </t-card>
  <t-card
    actions="操作"
    bordered=""
    header=""
    hover-shadow=""
    title="标题"
  >
     仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
  </t-card>
</t-space>
`;
